--- a/app/views/offers/show/_website_section.html.slim
+++ b/app/views/offers/show/_website_section.html.slim
@@ -6,6 +6,6 @@
       - last_index = websites.count - 1
 
       - websites.each_with_index do |website, index|
-        = link_to t("offers.show.websites.#{website.host}"), website.url,
+        = link_to website.shown_link + website.pdf_appendix, website.url,
                   target: '_blank'
         = ' | ' unless index == last_index
