--- a/app/views/offers/show/_opening_section.html.slim
+++ b/app/views/offers/show/_opening_section.html.slim
@@ -9,9 +9,10 @@ section.section-content
             th
               = t("activerecord.models.opening.#{day}") + ':'
             td dir='ltr'
-              - times.each do |time|
+              - times.sort.each do |time|
                 time.Table__time = time
-                / @todo extend to using https://schema.org/LocalBusiness itemprop="openingHours", datetime attr
+                / @todo extend to using https://schema.org/LocalBusiness
+                / itemprop="openingHours", datetime attr
                 / https://schema.org/openingHours
 
     - if offer.opening_specification? && offer.openings.any?
