--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -46,7 +46,8 @@ footer.footer-main
             li.nav-legal__listitem
               = link_to 'Datenschutzhinweise', '/datenschutzhinweise'
             li.nav-legal__listitem
-              #google_translate_element
+              # TODO: Refactor or remove after translation testing
+              # google_translate_element
               javascript:
                 function googleTranslateElementInit() {
                   new google.translate.TranslateElement({pageLanguage: 'de', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false, gaTrack: true, gaId: 'UA-59626864-1'}, 'google_translate_element');
