--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -1,18 +1,18 @@
 = simple_form_for search_cache, url: offers_path, # namespace: 'nav',
                                 html: { method: :get, novalidate: false } do |f|
-  = f.input :query, label: t('shared.search.labels.query'),
+  = f.input :query, label: t('.query_label'),
                     required: false,
                     input_html: { \
-                      placeholder: search_query_placeholder,
+                      placeholder: t(".query_placeholder.#{labels}"),
                       spellcheck: false,
                       autocomplete: 'off',
                       autofocus: true,
                       class: 'input-xlg typeahead' }
-  = f.input :search_location, label: t('shared.search.labels.loc'),
+  = f.input :search_location, label: t('.loc_label'),
                               input_html: { \
                                 value: geoloc_to_s,
                                 class: 'input-xlg JS-Geolocation__display',
-                                placeholder: t('shared.search.placeholder.loc'),
+                                placeholder: t(".loc_placeholder.#{labels}"),
                                 oninvalid: custom_validity_js('fill_field'),
                                 onchange: custom_validity_reset_js,
                                 required: true }
@@ -21,4 +21,4 @@
                                       class: 'JS-Geolocation__input',
                                       value: default_geolocation }
   = f.input :category, as: :hidden
-  button.main-search__submit = t 'shared.search.button'
+  button.main-search__submit = t '.button'
