--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -44,6 +44,7 @@
 
   .header-main {
     position: fixed;
+    top: 30px;
     right: 0;
     left: 0;
     z-index: 130;
@@ -466,6 +467,13 @@
         max-width: 100%;
       }
     }
+  }
+
+  .Banner {
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 300;
   }
 
   // Styling for JS-generated button
