--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -124,22 +124,25 @@
 
 .filter-form__switch {
   @extend %roboto_bold;
-  position: absolute;
-  top: 55px;
-  left: 0;
+  position: relative;
   display: block;
   padding: 0 15px;
   width: 100%;
   height: 30px;
-  background: $brand_blue image-url('ico_fieldset_expand--ondark.svg') no-repeat calc(100% - 15px) center;
+  background: $brand_blue image-url('ico_fieldset_collapse--ondark.svg') no-repeat calc(100% - 15px) center;
   color: $brand_white;
   text-align: left;
   font-size: 14px;
   line-height: 30px;
   cursor: pointer;
 
+  &[aria-collapsed="false"] {
+    margin-bottom: 20px;
+    background: $brand_blue image-url('ico_fieldset_expand--ondark.svg') no-repeat calc(100% - 15px) center;
+  }
 
   &[aria-collapsed="true"] {
+    margin-bottom: 0;
     background: $brand_blue image-url('ico_fieldset_collapse--ondark.svg') no-repeat calc(100% - 15px) center;
   }
 }
