--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -364,6 +364,8 @@
   .filter-form {
     padding-right: 5px;
     padding-bottom: 45px;
+    border-radius: 0;
+
 
     .input {
       padding: 0;
