--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -1,6 +1,6 @@
 header.header-main
   .wrapper-inner
-    h1.Logo.Logo = link_to "clarat.org", '/'
+    h1.Logo.Logo = link_to 'clarat.org', '/'
     .mascot.mascot--header
 
     .Distributor.Distributor--navigation
