--- a/app/views/offers/index/_advanced_search.html.slim
+++ b/app/views/offers/index/_advanced_search.html.slim
@@ -1,6 +1,6 @@
 .filter-form.filter-form--isCollapsed
   / See #258 - remove filter-form--isCollapsed modifier if return to progressive enhancement approach
-  h2.filter-form__headline = I18n.t('offers.index.advanced_search.form_headline')
+  h2.filter-form__headline = t '.form_headline'
   = simple_form_for search_cache, url: offers_path, namespace: 'advanced',
                     html: { method: :get, novalidate: false } do |f|
     = f.input :query, as: :hidden
@@ -11,7 +11,7 @@
       .col-form-inner
         fieldset.filter-form__fieldset
           legend.filter-form__fieldset__headline
-            = I18n.t('offers.index.advanced_search.fieldset_headline_contact')
+            = t '.fieldset_headline_contact'
           = f.input :contact_type,
                             item_wrapper_class: 'filter-form__radio',
                             as: :radio_buttons,
@@ -22,7 +22,7 @@
       .col-form-inner
         fieldset.filter-form__fieldset
           legend.filter-form__fieldset__headline
-            = I18n.t('offers.index.advanced_search.fieldset_headline_age')
+            = t '.fieldset_headline_age'
           = f.input :age_filter,
                             item_wrapper_class: 'filter-form__radio',
                             as: :radio_buttons,
@@ -33,8 +33,7 @@
       .col-form-inner
         fieldset.filter-form__fieldset
           legend.filter-form__fieldset__headline
-            = I18n.t 'offers.index.advanced_search'\
-                     '.fieldset_headline_target-group'
+            = t '.fieldset_headline_target-group'
           = f.input :audience_filter,
                             item_wrapper_class: 'filter-form__radio',
                             as: :radio_buttons,
@@ -45,12 +44,11 @@
       .col-form-inner
         fieldset.filter-form__fieldset.filter-form__fieldset--last
           legend.filter-form__fieldset__headline
-            = I18n.t('offers.index.advanced_search.fieldset_headline_language')
+            = t '.fieldset_headline_language'
           = f.input :language_filter,
                               class: 'filter-form__select',
                               label: false,
                               collection: \
                                 i18n_collection(LanguageFilter::IDENTIFIER)
 
-    = f.submit I18n.t('offers.index.advanced_search.submit'),
-               class: 'filter-form__submit'
+    = f.submit t('.submit'), class: 'filter-form__submit'
