--- a/app/views/offers/index/_map_sidebar.html.slim
+++ b/app/views/offers/index/_map_sidebar.html.slim
@@ -1,6 +1,6 @@
 / UNUSED? MAYBE REMOVABLE
 .aside-standard__container
-  h5.aside-standard__headline = t 'offers.index.map_output_searchresults'
+  h5.aside-standard__headline = t '.map_output_searchresults'
 
   #map-container
     #map-canvas data={ markers: markers.to_json, position: position.to_json }
