--- a/app/views/offers/show/_website_section.html.slim
+++ b/app/views/offers/show/_website_section.html.slim
@@ -1,11 +1,12 @@
 - if offer.websites.count > 0
   section.section-content.section-content--internet-presence
-    h3.section-content__title= t 'offers.show.internet_presence'
+    h3.section-content__title= t '.internet_presence'
     .section-content__body
       - websites = offer.structured_websites
       - last_index = websites.count - 1
 
       - websites.each_with_index do |website, index|
-        = link_to website.shown_link + website.pdf_appendix, website.url,
+        = link_to t(".websites.#{website.host}") + website.pdf_appendix,
+                  website.url,
                   target: '_blank'
         = ' | ' unless index == last_index
