--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -1,6 +1,6 @@
-- provide(:title, 'Häufige Fragen')
+- provide(:title, t('.title'))
 - cache 'faq_page' do
 
   main.content-main.content-main--wide
     .wrapper-inner
-      h1 = t 'pages.faq.title'
+      h1 = t '.heading'
