--- a/app/views/update_requests/_new.html.slim
+++ b/app/views/update_requests/_new.html.slim
@@ -1,4 +1,4 @@
 = semantic_form_for update_request, remote: true do |f|
-  = f.input :email, label: false, placeholder: 'E-Mail Adresse'
+  = f.input :email, label: false, placeholder: t('.email_placeholder')
   = f.input :search_location, as: :hidden
-  = f.action :submit, label: 'Nachricht erhalten'
+  = f.action :submit, label: t('.button')
