--- a/app/views/contacts/shared/_new.html.slim
+++ b/app/views/contacts/shared/_new.html.slim
@@ -1,10 +1,15 @@
 = simple_form_for contact,
                     html: { class: 'contact-form' },
                     remote: reporting do |f|
-  = f.input :name, label: false, input_html: { placeholder: 'Name (Pflicht)' }
-  - email_placeholder = reporting ? 'E-Mail Adresse (Optional)' : 'E-Mail Adresse (Pflicht)'
-  = f.input :email, label: false, required: !reporting, input_html: { placeholder: email_placeholder }
-  = f.input :message, label: false, input_html: { placeholder: 'Nachricht eingeben (Pflicht)' }
+  = f.input :name, label: false,
+                   input_html: { placeholder: t('.name_placeholder') }
+  = f.input :email, label: false,
+                    required: !reporting,
+                    input_html: { \
+                      placeholder: \
+                        t(".email_placeholder.required.#{!reporting}") }
+  = f.input :message, label: false,
+                      input_html: { placeholder: t('.message_placeholder') }
   = f.input :url, as: :hidden
   = f.input :reporting, as: :hidden
-  button Abschicken
+  = f.submit t '.send'
