--- a/app/views/layouts/partials/_about_teaser.html.slim
+++ b/app/views/layouts/partials/_about_teaser.html.slim
@@ -1,8 +1,9 @@
-.about-teaser
-  .about-background.yellow-background
-    .about-text
-      | Angebote der Kinder- und
-  br
-  .about-background.yellow-background
-    .about-text
-      | Jugendhilfe so einfach finden wie nie
+/ TODO: used? can be removed?
+/ .about-teaser
+/   .about-background.yellow-background
+/     .about-text
+/       | Angebote der Kinder- und
+/   br
+/   .about-background.yellow-background
+/     .about-text
+/       | Jugendhilfe so einfach finden wie nie
