--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -2,11 +2,11 @@
 
   header.header-main.header-main--wide
     .header-main__foreground.wrapper-inner
-      h1.Logo.Logo--start = link_to "clarat.org", '/'
+      h1.Logo.Logo--start = link_to 'clarat.org', '/'
 
       .Claim
-        h2.Claim__firstrow = t 'shared.navigation.claim.first_row'
-        h3.Claim__secondrow = t 'shared.navigation.claim.second_row'
+        h2.Claim__firstrow = t '.claim.first_row'
+        h3.Claim__secondrow = t '.claim.second_row'
 
     .header-main__stage
       / Optional stage for animations
@@ -21,7 +21,7 @@
       - cache 'category_navigation' do
 
         nav.nav-sections
-          h3.nav-sections__headline = t 'shared.distributor.sections_headline'
+          h3.nav-sections__headline = t '.category_headline'
 
           ul.nav-sections__list
             - Category.mains.each do |main|
