--- a/app/views/offers/index/_search_results.html.slim
+++ b/app/views/offers/index/_search_results.html.slim
@@ -11,7 +11,7 @@
     - main_offers = personal_offers
     - if remote_offers.any?
       h2.Listing-results__headline
-        = t 'offers.shared.remote_offers', count: search.remote_hits.nbHits
+        = t '.remote_offers', count: search.remote_hits.nbHits
         - if remote_offers[1]
           / If more than one national offer
           =< link_to t('.more'),
