--- a/app/views/offers/show/_who_section.html.slim
+++ b/app/views/offers/show/_who_section.html.slim
@@ -1,6 +1,5 @@
 - if offer.contact_people.any?
   section.section-content
-    h3.section-content__title = t 'offers.show.who.title'
+    h3.section-content__title = t '.heading'
     .section-content__body
         = render 'offers/show/who_contact_people', offer: offer
-
