for #272 - fix home title locale usage

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -4,16 +4,16 @@
   main.content-main.content-main--wide
     .wrapper-inner
       section.section-start.section-start--how
-        h4.section-start__headline = t '.how.title'
+        h4.section-start__headline = t '.how.heading'
         .section-start__body
           p = t '.how.text'
 
       section.section-start.section-start--whom
-        h4.section-start__headline = t '.whom.title'
+        h4.section-start__headline = t '.whom.heading'
         .section-start__body
           p = t '.whom.text'
 
       section.section-start.section-start--why
-        h4.section-start__headline = t '.why.title'
+        h4.section-start__headline = t '.why.heading'
         .section-start__body
           p = t '.why.text'
