for #87 - add shariff buttons (unstyled)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,3 +62,5 @@
 @import "vendor/twitter-typeahead_override";
 @import "vendor/places-autocomplete_override";
 @import "vendor/formtastic";
+
+@import "shariff";
