Decrease relative startpage header foreground image height

--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -10,8 +10,10 @@
 
   // Header ######################################
 
-  .header-main--wide {
-    height: 375px; // smaller height, @ToDo refactoring into container with a certain ratio by paddding-bottom: 39.5833333%
+  .header-main--wide,
+  .header-main__foreground {
+    height: 375px; // smaller height, @ToDo refactoring into container with a certain ratio by
+    min-height: 0;
   }
 
   .Claim {
