add first proof of concept for 'parallax' home/about header scrolling

--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -9,6 +9,7 @@
   margin-bottom: 30px;
   height: 140px;
   background: $brand_beige;
+  overflow: hidden;
 
   // Visual horizontal enlargement of non startpage distributor box
   &:before {
