--- a/app/assets/stylesheets/modules/_claim.scss
+++ b/app/assets/stylesheets/modules/_claim.scss
@@ -5,6 +5,7 @@
 // ---------------------------------------------------------------
 
 .Claim {
+  position: relative;
   float: right;
   margin-top: 92px;
   margin-right: 35px;
