--- a/app/views/offers/index/_search_results.html.slim
+++ b/app/views/offers/index/_search_results.html.slim
@@ -22,7 +22,7 @@
 
   h2.Listing-results__headline
     == search_results_info_headline search_cache, search
-    a[href="#"] Auf großer Karte anzeigen
+    a.big-map_open[href="#"] = I18n.t('offers.map.show_on_big_map')
 
   ul.Listing-results__list
     - main_offers.each do |offer|
