Temporarily disable filters

--- a/app/views/offers/index/_search_results.html.slim
+++ b/app/views/offers/index/_search_results.html.slim
@@ -1,4 +1,5 @@
-= render 'offers/index/advanced_search', search_cache: search_cache
+/  # Temporarily disable filters
+/ # = render 'offers/index/advanced_search', search_cache: search_cache
 
 .Listing-results
   /= link_to '#categories', class: 'jump-to-categories' do
