--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@
 @import "modules/listing-organizations";
 @import "modules/map";
 @import "modules/privacy";
+@import "modules/faq";
 @import "modules/flash-message";
 @import "modules/banner";
 @import "modules/ajax";
